--- a/src/index.css
+++ b/src/index.css
@@ -1,471 +1,353 @@
-@import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
-* {
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* 
+{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Wix Madefor Text", sans-serif;
-}
-body{
-  background-color: #f3f3f3;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
 }
 
-/* .flex-item
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   
-
-
-} */
-/* Header section*/
-
-.blue-container {
-  padding:5rem 0   ;
-  background-color: #25426b;
-  color: #ccc;
-}
-
-/* .header {
-  height: 10vh;
-  display: flex;
-  flex-direction: row;
-  color: #25426b;
-  background-color: #fff;
-  align-items: center;
-  padding: 30px;
-  margin-bottom: 30px;
-  justify-content: space-around;
-  z-index: 1;
-} */
-/* .fixed {
-  position: fixed;
-  top: 0;
-  width: 100%;
-
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-} */
- .logo img {
-  width: 100px;
-  height: 50px;
-  padding-right: 30px;
-}
-.title{
-  color: #25426b;
-  display: inline-block;
-  padding-left: 10px;
-}
-.addr
-{
-margin: 0;
-padding-left: 120px;
-}
-.header
-{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background-color: #fff;
-  height: 6rem;
-
-}
-.navBar
-{box-shadow: -27px 20px 27px -23px rgba(0,0,0,0.16);
-  -webkit-box-shadow: -27px 20px 27px -23px rgba(0,0,0,0.16);
-  -moz-box-shadow: -27px 20px 27px -23px rgba(0,0,0,0.16);
-  display: flex;
-background-color: #ccc;
-padding: 5px 0;
-  align-items: baseline;
-  justify-content: center;
-  /* height: 6rem; */
-
-}
-/* .navBar li:hover{
-  background-color: #25426b;
-  color: #ccc;
-} */
-.navBar a
-{
-  padding: 5px 0;
-  color: #25426b;
-}
-
-.loginBtn
-{
-  background-color: #ccc;
-  color: #25426b;
-  border-radius: 20px;
-}
-.loginBtn :hover{
-  color: #ccc;
-  background-color: #25426b;
-}
-
-
-.nav .list li {
-  /* align-items: center; */
-  /* margin: 20px; */
-  list-style: none;
- 
-  /* display: inline; */
-
-  padding:0 30px;
-  cursor: pointer;
-}
-.nav .list a:hover{
-  background-color: #25426b;
-  color: #ccc;
-}
-.nav .list{
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  padding: 0;
-  margin: 0;
-}
-a {
-  text-decoration: none;
+body {
+  
+  background-image:url(/background.jpg) ;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:cover;
   
 }
-
-.dropdown {
-  position: relative;
-  display: inline-block;
+.gallery
+{
+  height:300px;
+  object-fit: cover;
 }
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+.colorPage 
+{
+  color: #25426b;
 }
-
-.dropdown-content a {
-  color: #26426b;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-  } */
-.input-container {
-  position: relative;
-}
-.input-field {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 200px;
-}
-.input-button {
-  position: relative;
-
-  background-color: #25426b;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-/*Introduction section*/
-.intro-block {
-  background-color: #25426b;
+.revColor 
+{
   color: #ccc;
-  margin: 50px 0 50px 0;
-  padding: 50px 0 50px 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-
-  justify-content: space-around;
-
-  /* background-image: url('/testimonial-2.jpg');
-    background-repeat: no-repeat;
-    background-size: contain; */
+  background-color: #25426b;
 }
-
-.intro-img img {
- 
-  width: 100%;
-}
-.justify-text{
+.justify-text 
+{
   text-align: justify;
 }
-.btn1 {
-  background-color: #25426b;
-  color: #ccc;
-  border: 1px solid #fff;
-  border-radius: 20%;
-  text-align: center;
+
+
+.logo img {
   width: 100%;
-  /* height: 30px; */
-  cursor: pointer;
+  height: 50px;
 }
+.nav-item .nav-link
+{
+  color: #25426b;
+  margin: 0px 10px;
+  font-size: large;
+} 
+.nav-item .nav-link:hover
+{
+ color: #a0a0a0;
+}
+a
+{
+  text-decoration: none;
+}
+
+label 
+{
+  font-size: 14px;
+  font-weight: 600;
+  color: #25426b;
+  opacity: 0.5;
+}
+
+.contact-img img
+{
+  max-width: 100%;
+  max-height: auto;
+}
+
+/*Image Slider Section*/
+.resolution 
+{
+  height: 35rem;
+  width: 100%;
+  object-fit: cover;
+  background-position: center;
+}
+/* MyCarousel.css */
+
 /*About Us section*/
-
-.aboutUs {
-  background-color: #25426b;
-  color: #ccc;
-  margin: 50px 0 50px 0;
-  padding: 50px 0 50px 0;
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-  justify-content: space-around;
-}
-.aboutUs-info {
-  align-items: center;
+.aboutUs 
+{
+ color: #25426b;
+ margin: 0;
+ justify-content: space-between;
 }
 /*Services section*/
-.services {
-  color: #ccc;
-  background-color: #25426b;
+
+.service-card
+{
+  cursor: pointer;
+  color: #25426b;
+  border-radius: 3%;
+
 }
-.reviews {
-  color: #ccc;
+.service-card:hover
+{
   background-color: #25426b;
-  display: flex;
-  flex-direction: row;
+  color: #fff;
+  transition: 1s;
+
 }
-/*Client Review Section*/
-.clientReview {
-  color: #ccc;
-  background-color: #25426b;
-  display: flex;
+@media screen and (max-width: 768px) {
+  .card {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 750px) {
+  p {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: .1px;
+  }
+}
+/*Language Logos section*/
+.img-fluid
+{
+ 
+  padding: 10px;
+  height: 100px;
+  width: 100px;
+  object-fit: contain;
+ filter: grayscale(100%);
+  transition: filter 0.5s ease;/* Convert images to grayscale by default */
+  transition: transform 0.3s ease;
+  
+}
+.img-fluid:hover
+{
+ transform: scale(1.2);
+  filter: grayscale(0%); 
+ 
+}
+
+.carousel-indicators li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  opacity: 0.6;
+  border-radius: 50%;
+  margin: 5px;
+  cursor: pointer;
+}
+.carousel-indicators .active 
+{
+  background-color: #000;
+
 }
 /*Footer Section*/
-.footer {
-  color: #ccc;
-  background-color: #25426b;
-}
-.copyright {
+.footer 
+{
   
+  justify-content: center;
+  background-color: #26426b;
+  
+}
+
+.copyright 
+{
+
   bottom: 0;
   width: 100%;
   background-color: #ccc;
   color: #26426b;
-  height: 5rem;
   align-items: center;
   justify-content: center;
   object-fit: cover;
 }
-/*Image Slider Section*/
-
-/*Login form Section*/
-/* LoginForm.css */
-
-.Auth-form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-
-.Auth-form {
-  width: 420px;
-  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
-  padding-top: 30px;
-  padding-bottom: 20px;
-  border-radius: 8px;
-  background-color: #ccc;
-}
-.Auth-form img {
-  position: relative;
-  width: 100px;
-  left: 38%;
-  padding-bottom: 20px;
-}
-.Auth-form-content {
-  padding-left: 12%;
-  padding-right: 12%;
-}
-
-.Auth-form-title {
-  text-align: center;
-  margin-bottom: 1em;
-  font-size: 24px;
-  color: #25426b;
-  font-weight: 800;
-}
-
-label {
-  font-size: 14px;
-  font-weight: 600;
-  color: #25426b;
-}
-.link {
-  cursor: pointer;
-  color: #25426b;
-}
-.submit {
-  background-color: #25426b;
-  color: #ccc;
-}
-.submit:hover {
-  background-color: #25426b;
-  color: #ccc;
-}
-
-
-/*Image Slider Section*/
-.resolution {
-  height: 35rem;
-  width: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-.top-left-caption {
-  position: absolute;
-  top: 30%;
-  left: 30%;
-  right: auto; /* Ensure caption width does not exceed image width */
-  bottom: auto;
-  padding: 20px;
-  /* background-color: rgba(0, 0, 0, 0.5);  */
-  color: white; /* Text color */
-  z-index: 1;
-
-}
-.overlay
+.copyright p
 {
-  height: 100%;
-  width: 100%;
-  background-color: #000;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.8;
+  margin-bottom: 0;
+  font-size: small;
 }
-
-.caption {
-  /* position: relative;
-    top: 0; */
-  color: #fff;
-  padding-top: 0;
-  margin-top: 0;
-  font-size: 30px;
-}
-/*features section*/
-.features {
-  color: #fff;
-  background-color: #25426b;
-  font-size: 30px;
-  overflow: hidden;
-  
-
-}
-/* .cloned img
+.copyright .strong
 {
-  width: 15%;
-aspect-ratio: 3/2;
-object-fit: contain;
-mix-blend-mode: color-burn;
-} */
-
-.ele {
-  position: relative;
-  animation: mymove 20s linear infinite;
-  
+  font-size: small;
 }
-
-@keyframes mymove {
-  0% {
-    left: 50%;
-  }
-  50% {
-    left: 25%;
-  }
-
-  100% {
-    left: 0%;
-  }
-}
-.color
-{
-  color: #25426b;
-  
-}
-.revColor
-{
-  color: #ccc;
-  background-color: #25426b;
-}
-.footer a
-{
-  color: #ccc;
-}
-.iot-image
+.iot-image 
 {
   height: 25rem;
   width: 100%;
-  background-image: url(public/testimonial-2.jpg);
-background-size: cover;
-background-position: center ;
-background-repeat: no-repeat;
+  background-image: url(public/iot.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-.iot-image img{
-  height: 100%;
+
+.embedded-image
+{
+  height: 25rem;
   width: 100%;
+  background-image: url(public/embedded.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-@media screen and (max-width:860px) {
-  .title{
+.web-image
+{
+  height: 25rem;
+  width: 100%;
+  background-image: url(public/web.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.mob-image
+{
+  height: 25rem;
+  width: 100%;
+  background-image: url(public/mobile.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 860px) 
+{
+  .title 
+  {
     font-size: 22px;
   }
-  .addr{
+  .addr 
+  {
     font-size: 18px;
   }
-
+  .resolution
+  {
+    height: 30rem;
+  }
 }
-@media screen and (max-width:500px) {
-  .title
+@media screen and (max-width: 500px) 
+{
+  .title 
   {
     display: none;
   }
-}
-@media screen and (max-width:620px) {
-  .features
+  .resolution
   {
-    font-size: 20px;
-  }
-  
+    height: 25rem;
+  } 
 }
-
-@media screen and (max-width:560px)
+@media screen and (max-width: 560px) 
 {
-  .copyright{
-  font-size: 12px;
-}
-}
-@media screen and (max-width:420px) {
-  .features
+  .copyright 
   {
-    font-size: 15px;
+    font-size: 12px;
   }
-  .copyright{
+}
+@media screen and (max-width: 420px) 
+{
+  .copyright 
+  {
     font-size: 11px;
   }
+  .resolution
+  {
+    height: 20rem;
+  } 
 }
-.nav-item
+.btn-items
 {
-  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: #25426b;
+  transition: transform 0.3s ease;
 }
-.inner-column a{
+.btn-items:hover
+{
+  transform: scale(1.1);
+}
+.career-form
+{
+  display: flex;
+  justify-content: center;
+}
+.contact
+{
+  align-items: center;
+ 
+}
+.contact-info 
+{
+  flex-direction: column;
+  padding: 10px 0;
   color: #25426b;
+  align-items: center;
+}
+.iframe
+{
+position: relative;
+width: 100%;
+}
+.map
+{
+  width: 100%;
+  height: 250px;
+}
+.form-floating
+{
+  width: 100%;
+}
+
+/*Language Logos Section*/
+
+.dropdown-menu.centered {
+ width: max-content;
+  left: 50% !important;
+  transform: translateX(-50%);
+  margin: 0;
+  padding: 0;
+ 
+}
+.dropdown-menu li
+{
+  background-color: #25426b;
+  padding: 10px;
+  cursor: pointer;
+}
+.dropdown-menu a
+{
+  color: #fff;
+}
+.dropdown-menu li:hover
+{
+  color: #25426b;
+  background-color: #fff;
+}
+.dropdown-menu li:hover a
+{
+  background-color: #fff;
+  color: #25426b;
+}
+.contact-btn 
+{
+  background-color: #25426b;
+  color: #fff;
+}
+
+
+.test .nice{
+  background-color: red;
+}
+.llogos
+{
+
 }
