--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,14 @@ label
   {
     height: 30rem;
   }
+  .dropdown-menu.centered {
+    /* width: max-content;
+     left: 50% !important;
+     transform: translateX(-50%); */
+     margin: 0;
+     padding: 0;
+    
+   }
 }
 @media screen and (max-width: 500px) 
 {
@@ -241,6 +249,26 @@ label
   {
     height: 25rem;
   } 
+  .dropdown-menu.centered {
+    /* width: max-content;
+     left: 50% !important;
+     transform: translateX(-50%); */
+     margin: 0;
+     padding: 0;
+    
+   }
+}
+@media screen and (max-width: 980px) 
+{
+  
+  .dropdown ul{
+    /* width: max-content; */
+     /* left: 50% !important; */
+     transform: translateX(0%);
+     /* margin: 0;
+     padding: 0; */
+    
+   }
 }
 @media screen and (max-width: 560px) 
 {
@@ -248,6 +276,14 @@ label
   {
     font-size: 12px;
   }
+  .dropdown ul {
+    /* width: max-content;
+     left: 50% !important; */
+     transform: translateX(0%);
+     /* margin: 0;
+     padding: 0; */
+    
+   }
 }
 @media screen and (max-width: 420px) 
 {
@@ -259,6 +295,14 @@ label
   {
     height: 20rem;
   } 
+  .dropdown ul {
+    /* width: max-content; */
+     /* left: 50% !important; */
+     transform: translateX(0%);
+     /* margin: 0;
+     padding: 0; */
+    
+   }
 }
 .btn-items
 {
@@ -342,5 +386,8 @@ width: 100%;
   background-color: #25426b;
   color: #fff;
 }
-
+.contactBtn:hover
+{
+color: #fff;
+}
 
